# seeker

./: .gitignore  .gitmodules  .syntastic_cpp_config  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Magicafile  README.md
data/: config.rb  main.rb
include/: Actor.h  Config.h  Engine.h  Errors.h  Event.h  EventManager.h  EventType.h  Font.h  Framework.h  GameObject.h  GameState.h  IEvent.h  IResource.h  IScript.h  ISubscriber.h  Instance.h  Logger.h  Renderer.h  Resource.h  Ruby.h  Scene.h  Seeker.h  Sprite.h  StringUtils.h  Texture.h  Utils.h  Window.h  framework.h  logger.h  renderer.h  texture.h  window.h
include/Ruby/: Actor.h  Config.h  Engine.h  Game.h  RubyObject.h  Scene.h
include/Ruby/UI/: ButtonWidget.h  TextWidget.h
include/Script/: Config.h  Engine.h  Game.h
include/UI/: ButtonWidget.h  Event.h  TextWidget.h  Widget.h
lib/: CMakeLists.txt
src/: Actor.cpp  CMakeLists.txt  Config.cpp  Event.cpp  EventManager.cpp  Font.cpp  Framework.cpp  Game.cpp  GameObject.cpp  GameState.cpp  IScript.cpp  Instance.cpp  Logger.cpp  Renderer.cpp  Ruby.cpp  Scene.cpp  Sprite.cpp  Texture.cpp  Window.cpp
src/Ruby/: Actor.cpp  Config.cpp  Engine.cpp  Game.cpp  Scene.cpp
src/Ruby/UI/: ButtonWidget.cpp  TextWidget.cpp
src/Script/: Config.cpp  Engine.cpp  Game.cpp
src/UI/: ButtonWidget.cpp  Event.cpp  TextWidght.cpp  Widget.cpp
src/tests/: Main.cpp
